kakao login complete - app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.android.volley:volley:1.2.0'
 
-    //these two lines are added
+    //these lines are added
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
 }
 repositories {
     mavenCentral()
